// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test layout-style. test <Container /> snapshot. 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<div
  class="c0"
/>
`;

exports[`test layout-style. test <HeaderStyle /> snapshot. 1`] = `
.c0 {
  width: 100%;
  height: calc(44px + env(safe-area-inset-top));
  position: fixed;
  left: 0;
  top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #fff;
  padding: env(safe-area-inset-top) 5px 0 5px;
  overflow: hidden;
  background-color: #6cb8cf;
  z-index: 3;
}

@media (min-width:480px) {
  .c0 {
    left: 50%;
    width: 400px;
    margin-left: -200px;
  }
}

<header
  class="c0"
/>
`;

exports[`test layout-style. test <NextLink /> snapshot. 1`] = `
.c0 {
  min-width: 25px;
  height: 25px;
}

<div
  class="c0"
/>
`;

exports[`test layout-style. test <PrevLink /> snapshot 1`] = `
.c0 {
  min-width: 25px;
  height: 25px;
}

<div
  class="c0"
/>
`;

exports[`test layout-style. test <Title /> snapshot. 1`] = `
.c0 {
  font-family: 'Fredoka One',Baloo;
  font-size: 20px;
  font-weight: bold;
}

<div
  class="c0"
/>
`;

exports[`test layout-style. test <Wrapper /> snapshot. 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 400px;
  min-height: 100%;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
}

@media (min-width:480px) {
  .c0 {
    margin: 0 auto;
  }
}

<div
  class="c0"
/>
`;
